@@ -5,6 +5,9 @@ import com.spa.ecommerce.address.AddressRepository;
 import com.spa.ecommerce.buyer.BuyerDTO;
 import com.spa.ecommerce.buyer.BuyerDTOMapper;
 import com.spa.ecommerce.buyer.BuyerRepository;
+import com.spa.ecommerce.order.Order;
+import com.spa.ecommerce.order.dto.OrderDTO;
+import com.spa.ecommerce.order.dto.OrderDTOMapper;
 import com.spa.ecommerce.order.orderitem.OrderItem;
 import com.spa.ecommerce.order.orderitem.dto.OrderItemDTO;
 import com.spa.ecommerce.order.orderitem.dto.OrderItemDTOMapper;
@@ -43,7 +46,7 @@ public class UserServiceImpl implements UserService {
     @Autowired
     private AddressRepository addressRepository;
     @Autowired
-    private OrderItemDTOMapper orderItemDTOMapper;
+    private OrderDTOMapper orderDTOMapper;
 
     @Override
     public Collection<UserDTO> getAll() {
@@ -120,24 +123,27 @@ public class UserServiceImpl implements UserService {
         }
     }
 
-    @Override
-    public Optional<List<OrderItemDTO>> getOrderItemsForSeller(Principal principal) {
+    public Optional<List<OrderDTO>> getOrdersForSeller(Principal principal) {
         String email = principal.getName();
         Optional<User> user = userRepository.findByEmail(email);
         if (user.isPresent()) {
             Long sellerId = user.get().getId();
             Optional<List<OrderItem>> oi = sellerRepository.findOrderItemsByUserId(sellerId);
             if (oi.isPresent()) {
-                List<OrderItem> orderItems = oi.get();
-                List<OrderItemDTO> dto = orderItems.stream().map(o -> orderItemDTOMapper.apply(o)).collect(Collectors.toList());
+                List<Order> orders = oi.get().stream()
+                        .map(OrderItem::getOrder)
+                        .distinct()
+                        .toList();
+                List<OrderDTO> dto = orders.stream()
+                        .map(orderDTOMapper::apply)
+                        .collect(Collectors.toList());
                 return Optional.of(dto);
-            }else{
+            } else {
                 return Optional.empty();
             }
         }
         return Optional.empty();
     }
-
     @Override
     public Optional<UserWrapper> getCurrentUser(Principal principal) {
         String email = principal.getName();
